--- a/recipes/chocolatechipcookies.html
+++ b/recipes/chocolatechipcookies.html
@@ -3,15 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Lasagna</title>
-        </title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Chocolate Chip Cookies</h1>
-        <img src="../images/chocolatechipcookies.png" width="300" height="300">
-        <h2>Took the recipe for the world's best chocolate chip cookies from <a href="https://www.allrecipes.com/recipe/10813/best-chocolate-chip-cookies/" target="_new">allrecipes.com!</a></h2>
+        <h1 class="recipe-header">Chocolate Chip Cookies</h1>
+        <img src="../images/chocolatechipcookies.png">
+        
+        <div class = "recipe-summary">
+            <h2>Took the recipe for the world's best chocolate chip cookies from <a href="https://www.allrecipes.com/recipe/10813/best-chocolate-chip-cookies/" target="_new">allrecipes.com!</a></h2>
         <h3>Chocolate chip cookies are meant for every mood!</h3>
+        </div>
+        
         <hr>
+
         <h2>Ingredients</h2>
         <ul>
             <li>Butter</li>
