--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,15 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Lasagna</title>
-        </title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Lasagna</h1>
-        <img src="../images/lasagna.png" width="400" height="300">
-        <h2>Took the recipe for the world's best lasagna from <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/" target="_new">allrecipes.com!</a></h2>
-        <h3>I don't quite fancy lasagna because of the tomato sauce but this is a season of trying new things!</h3>
+        <h1 class="recipe-header">Lasagna</h1>
+        <img src="../images/lasagna.png">
+
+        <div class="recipe-summary">
+            <h2>Took the recipe for the world's best lasagna from <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/" target="_new">allrecipes.com!</a></h2>
+            <h3>I don't quite fancy lasagna because of the tomato sauce but this is a season of trying new things!</h3>
+        </div>
+
         <hr>
+        
         <h2>Ingredients</h2>
         <ul>
             <li>Meat</li>
