--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <li>To center an image, you can use inline CSS, which are styles added to HTML elements directly or change the CSS for the img element - Convert it to a block-level element, then apply <em>margin: auto;</em>.</li>
             </ul>
         </div>
+
         <p></p>
         <hr>
 
@@ -70,8 +71,19 @@
             <strong>Some questions I have:</strong>
             <ul>
                 <li>Can you create functions in HTML and import it in from one file into another to keep code neat?</li>
+                <li>Need to find out about <em>display:flex</em> a little more. Can't seem to get it to work.</li>
             </ul>
         </div>
+
+        <p></p>
+        <hr>
+        <div>
+            <h1> Testing <em>display:flex</em> property</h1>
+            <ul class="test-flex">
+                <li>Item 1</li>
+                <li>Item 2</li>
+            </ul>
+         </div>
 
     </body>
 </html>
