--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
                 <li><span class="instructions">Right-click > Inspect</span>: To view Developer tools to inspect how HTML code is being rendered on browser.</li>
                 <li>To add a class to a text, the text must have an element attached to it. Can use <em>div</em> tags but it adds a new line.</li>
                 <li>Note the difference between <em>block</em> and <em>inline</em> tags.</li>
-                <li>A generic inline tag is a <em>spam</em> tag.</li>
+                <li>A generic inline tag is a <em>span</em> tag.</li>
                 <li>To center an image, you can use inline CSS, which are styles added to HTML elements directly or change the CSS for the img element - Convert it to a block-level element, then apply <em>margin: auto;</em>.</li>
             </ul>
+
+            <em>Notes transferred to README.md on theodinproject repository.</em>
         </div>
 
         <p></p>
